# jinja2_pdoc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-sample.yaml  README.md  index.html  jinja2.html  jinja2_pdoc.html  pathlib.html  pdoc.html  pyproject.toml  subprocess.html  tox.ini  warnings.json
.github/: dependabot.yml
.github/workflows/: publish.yml  pytest.yml  testbuild.yml
docs/: README.md.jinja2  __init__.py  __main__.py  documentation.py  filter.md  outdated.py  readme.py  syntax.md
docs/dark-mode/: index.html.jinja2
examples/: example.md.jinja2  example.py
jinja2/: _identifier.html  async_utils.html  bccache.html  compiler.html  constants.html  debug.html  defaults.html  environment.html  exceptions.html  ext.html  filters.html  idtracking.html  lexer.html  loaders.html  meta.html  nativetypes.html  nodes.html  optimizer.html  parser.html  runtime.html  sandbox.html  tests.html  utils.html  visitor.html
jinja2_pdoc/: __init__.py  cli.py  environment.py  extension.py  meta.py  wrapper.py
pdoc/: _compat.html  doc.html  doc_ast.html  doc_pyi.html  doc_types.html  docstrings.html  extract.html  markdown2.html  render.html  render_helpers.html  search.html  web.html
tests/: test_cli.py  test_environment.py  test_extension.py  test_filter.py  test_meta.py  test_module.py  test_wrapper.py
