[tool.poetry]
name = "jinja2-pdoc"
version = "0.1.0"
description = "jinja2 extension to embedd python code directly from module using pdoc"
authors = ["Christoph Dörrer <d-chris@web.d>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
keywords = ["jinja2", "pdoc", "jinja2 extension"]

[tool.poetry.urls]
homepage = "https://github.com/d-chris/jinja2_pdoc"
repository = "https://github.com/d-chris/jinja2_pdoc"
documentation = "https://github.com/d-chris/jinja2_pdoc"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
Jinja2 = "^3.1.2"
pdoc = "^14.3.0"
click = "^8.1.7"
autopep8 = "^2.0.4"

[tool.poetry.scripts]
jinja2pdoc = "jinja2_pdoc.cli:main"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-random-order = "^1.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
